--- a/.env
+++ b/.env
@@ -14,5 +14,5 @@ CORS_ORIGIN=http://localhost:3000,http://192.168.1.149:3000
 FRONTEND_PORT=3000
 CORS_ORIGIN=http://localhost:3000
 
-VITE_API_BASE_URL=http://192.168.1.149:5000/api
+VITE_API_BASE_URL=http://localhost:5000/api
 VITE_FRONTEND_PORT=3000
