--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
       "source": "/(.*)",
       "headers": [
         {
+          "key": "Content-Security-Policy",
+          "value": "default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self'; font-src 'self'; connect-src 'self'; frame-ancestors 'none';"
+        },
+        {
           "key": "X-Content-Type-Options",
           "value": "nosniff"
         },
